--- a/where_to_go/templates/index.html
+++ b/where_to_go/templates/index.html
@@ -4,94 +4,65 @@
 <head>
   <meta charset="utf-8">
   <title>Куда пойти — Москва глазами Артёма</title>
-
+  
   <link rel="shortcut icon" href="{% static 'places/images/favicon.png' %}" type="image/png">
-
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
+  
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
   <link rel="stylesheet" href="{% static 'places/css/leaflet-sidebar.css' %}"/>
-
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="https://unpkg.com/@ansur/leaflet-pulse-icon@0.1.1/dist/L.Icon.Pulse.css">
-
+  
   <style>
-      body {
-          padding: 0;
-          margin: 0;
-      }
-
-      html, body, #map {
-          height: 100%;
-      }
-
-      .place-description img {
-          max-width: 100%;
-      }
-
-      .sidebar-content {
-          padding: 14px 20px;
-          height: 100%;
-      }
-
-      .select-place-prompt {
-          color: red;
-          width: 100px;
-      }
-  </style>
-  <script id="places-geojson" type="application/json">
-    {
-      "type": "FeatureCollection",
-      "features": [
-        {
-          "type": "Feature",
-          "geometry": {
-            "type": "Point",
-            "coordinates": [37.62, 55.793676]
-          },
-          "properties": {
-            "title": "«Легенды Москвы",
-            "placeId": "moscow_legends",
-            "detailsUrl": "https://raw.githubusercontent.com/devmanorg/where-to-go-frontend/refs/heads/master/places/moscow_legends.json"
-          }
-        },
-        {
-          "type": "Feature",
-          "geometry": {
-            "type": "Point",
-            "coordinates": [37.64, 55.753676]
-          },
-          "properties": {
-            "title": "Крыши24.рф",
-            "placeId": "roofs24",
-            "detailsUrl": "https://raw.githubusercontent.com/devmanorg/where-to-go-frontend/refs/heads/master/places/roofs24.json"
-          }
-        }
-      ]
+    body {
+        padding: 0;
+        margin: 0;
     }
-  </script>
 
+    html, body, #map {
+        height: 100%;
+    }
+
+    .place-description img {
+        max-width: 100%;
+    }
+
+    .sidebar-content {
+        padding: 14px 20px;
+        height: 100%;
+    }
+
+    .select-place-prompt {
+        color: red;
+        width: 100px;
+    }
+  </style>
+
+  {{ places_geojson|json_script:"places-geojson" }}
+  
   <script id="app-template" type="text/template">
     <div v-bind:class="{'sidebar-content': 1, 'bg-white': selectedPlace, 'bg-secondary': !selectedPlace}">
       <div v-if="promptVisible" class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
         <img class="d-block select-place-prompt mb-4" src="{% static 'places/images/hand-pointer-regular.svg' %}" alt="Select place">
         <h4>Выберите место на карте</h4>
       </div>
-
+      
       <div class="align-items-center justify-content-center d-flex" v-if="loading" style="height: 100%;">
         <div class="spinner-grow text-light" style="width: 3rem; height: 3rem;" role="status">
           <span class="sr-only">Loading...</span>
         </div>
       </div>
-
+      
       <div class="place-description" v-if="selectedPlace">
-
+        
         <img v-if="mainPhotoSrc" v-bind:src="mainPhotoSrc" class="d-block shadow mb-3 rounded" v-bind:alt="selectedPlace.title">
-
+        
         <h5 class="mb-3">{{ selectedPlace.title }}</h5>
-
+        
         <p>{{ selectedPlace.short_description }}</p>
-
+        
         <div id="place-photos" class="carousel slide mb-3 shadow" data-ride="carousel" data-interval="5000">
           <ol class="carousel-indicators">
             <template v-for="(img, index) in carouselImgs" :key="img">
@@ -116,7 +87,7 @@
             </a>
           </template>
         </div>
-
+        
         <div v-html="selectedPlace.long_description"></div>
       </div>
     </div>
@@ -144,172 +115,172 @@
 <script src="{% static 'places/js/leaflet-sidebar.js' %}"></script>
 
 <script>
-    var map = L.map('map');
-    map.setView([55.753989, 37.623191], 11);
+  var map = L.map('map');
+  map.setView([55.753989, 37.623191], 11);
 
-    L.tileLayer.provider('OpenStreetMap.Mapnik').addTo(map);
+  L.tileLayer.provider('OpenStreetMap.Mapnik').addTo(map);
 
-    var sidebar = L.control.sidebar('sidebar', {
-        closeButton: true,
-        position: 'right'
-    });
-    map.addControl(sidebar);
+  var sidebar = L.control.sidebar('sidebar', {
+      closeButton: true,
+      position: 'right'
+  });
+  map.addControl(sidebar);
 
-    // FIXME should be hidden in production mode
-    L.control.custom({
-        position: 'bottomleft',
-        content: `
-        <label>
-            <input name="debug" type="checkbox" ${log.getLevel() <= 1 && 'checked'}/>
-            Отладка
-        </label>`,
-        style: {
-            padding: '10px',
-            background: 'rgba(255, 255, 255, 0.7)',
-        },
-        events: {
-            click: event => {
-                if (event.target.name == 'debug') {
-                    let level = event.target.checked && 'debug' || 'warn';
-                    log.setLevel(level);
-                    console.log(`Set log level: ${level}`)
-                }
-            },
-        }
-    }).addTo(map);
+  // FIXME should be hidden in production mode
+  L.control.custom({
+      position: 'bottomleft',
+      content: `
+      <label>
+          <input name="debug" type="checkbox" ${log.getLevel() <= 1 && 'checked'}/>
+          Отладка
+      </label>`,
+      style: {
+          padding: '10px',
+          background: 'rgba(255, 255, 255, 0.7)',
+      },
+      events: {
+          click: event => {
+              if (event.target.name == 'debug') {
+                  let level = event.target.checked && 'debug' || 'warn';
+                  log.setLevel(level);
+                  console.log(`Set log level: ${level}`)
+              }
+          },
+      }
+  }).addTo(map);
 
-    function loadJSON(elementId) {
-        let element = document.getElementById(elementId);
+  function loadJSON(elementId) {
+      let element = document.getElementById(elementId);
 
-        if (!element) {
-            log.error(`Not found element with id '${elementId}'.`)
-            return null;
-        }
+      if (!element) {
+          log.error(`Not found element with id '${elementId}'.`)
+          return null;
+      }
 
-        return JSON.parse(element.textContent);
-    }
+      return JSON.parse(element.textContent);
+  }
 
-    let places = loadJSON('places-geojson');
-    log.debug('Load GeoJSON for places', places);
+  let places = loadJSON('places-geojson');
+  log.debug('Load GeoJSON for places', places);
 
 
-    L.geoJSON(places, {
-        pointToLayer: function (geoJsonPoint, latlng) {
-            if (geoJsonPoint.geometry.type != "Point") {
-                return
-            }
+  L.geoJSON(places, {
+      pointToLayer: function (geoJsonPoint, latlng) {
+          if (geoJsonPoint.geometry.type != "Point") {
+              return
+          }
 
-            let color = geoJsonPoint.properties.color || 'red';
+          let color = geoJsonPoint.properties.color || 'red';
 
-            var pulsingIcon = L.icon.pulse({
-                iconSize: [12, 12],
-                color: color,
-                fillColor: color,
-                heartbeat: 2.5,
-            });
+          var pulsingIcon = L.icon.pulse({
+              iconSize: [12, 12],
+              color: color,
+              fillColor: color,
+              heartbeat: 2.5,
+          });
 
-            let marker = L.marker(latlng, {
-                icon: pulsingIcon,
-                riseOnHover: true,
-            });
+          let marker = L.marker(latlng, {
+              icon: pulsingIcon,
+              riseOnHover: true,
+          });
 
-            marker.bindTooltip(geoJsonPoint.properties.title);
-            marker.bindPopup(function (layer) {
-                return geoJsonPoint.properties.title;
-            })
+          marker.bindTooltip(geoJsonPoint.properties.title);
+          marker.bindPopup(function (layer) {
+              return geoJsonPoint.properties.title;
+          })
 
-            marker.on('click', function (event) {
-                log.debug('Feature selected', geoJsonPoint);
-                sidebar.show();
-                loadPlaceInfo(geoJsonPoint.properties.placeId, geoJsonPoint.properties.detailsUrl);
-            });
-            return marker;
-        }
-    }).addTo(map);
+          marker.on('click', function (event) {
+              log.debug('Feature selected', geoJsonPoint);
+              sidebar.show();
+              loadPlaceInfo(geoJsonPoint.properties.placeId, geoJsonPoint.properties.detailsUrl);
+          });
+          return marker;
+      }
+  }).addTo(map);
 
-    var sidebarApp = new Vue({
-        el: '#sidebar-app',
-        template: document.getElementById('app-template').innerHTML,
-        data: {
-            loadingPlaceId: null,
-            selectedPlace: null,  // object with attributes specified below
-            // title
-            // placeId
-            // imgs
-            // short_description
-            // long_description
-        },
-        computed: {
-            promptVisible: function () {
-                return !this.loading && !this.selectedPlace;
-            },
-            loading: function () {
-                return this.loadingPlaceId !== null;
-            },
-            mainPhotoSrc: function () {
-                if (!this.selectedPlace || !this.selectedPlace.imgs.length) {
-                    return null;
-                }
-                return this.selectedPlace.imgs[0];
-            },
-            carouselImgs: function () {
-                if (!this.selectedPlace || !this.selectedPlace.imgs.length) {
-                    return [];
-                }
-                return this.selectedPlace.imgs.slice(1);
-            },
-        },
-        updated: function () {
-            this.$nextTick(function () {
-                // Код, будет запущен только после обновления всех представлений
-                $('#place-photos').carousel();
-            })
-        },
-        methods: {
-            handlePhotosClick: function (slideId = 'next') {
-                // default event handlers of Bootstrap Carousel conflict with Leaflet
-                // so custom handler will mimic expected carousel behaviour
-                $('#place-photos').carousel(slideId);
-            }
-        },
-    });
+  var sidebarApp = new Vue({
+      el: '#sidebar-app',
+      template: document.getElementById('app-template').innerHTML,
+      data: {
+          loadingPlaceId: null,
+          selectedPlace: null,  // object with attributes specified below
+          // title
+          // placeId
+          // imgs
+          // short_description
+          // long_description
+      },
+      computed: {
+          promptVisible: function () {
+              return !this.loading && !this.selectedPlace;
+          },
+          loading: function () {
+              return this.loadingPlaceId !== null;
+          },
+          mainPhotoSrc: function () {
+              if (!this.selectedPlace || !this.selectedPlace.imgs.length) {
+                  return null;
+              }
+              return this.selectedPlace.imgs[0];
+          },
+          carouselImgs: function () {
+              if (!this.selectedPlace || !this.selectedPlace.imgs.length) {
+                  return [];
+              }
+              return this.selectedPlace.imgs.slice(1);
+          },
+      },
+      updated: function () {
+          this.$nextTick(function () {
+              // Код, будет запущен только после обновления всех представлений
+              $('#place-photos').carousel();
+          })
+      },
+      methods: {
+          handlePhotosClick: function (slideId = 'next') {
+              // default event handlers of Bootstrap Carousel conflict with Leaflet
+              // so custom handler will mimic expected carousel behaviour
+              $('#place-photos').carousel(slideId);
+          }
+      },
+  });
 
-    map.on('click', function () {
-        sidebarApp.selectedPlace = null;
-        sidebarApp.loadingPlaceId = null;
-    })
+  map.on('click', function () {
+      sidebarApp.selectedPlace = null;
+      sidebarApp.loadingPlaceId = null;
+  })
 
-    async function loadPlaceInfo(placeId, detailsUrl) {
-        sidebarApp.selectedPlace = null;
-        sidebarApp.loadingPlaceId = placeId;
+  async function loadPlaceInfo(placeId, detailsUrl) {
+      sidebarApp.selectedPlace = null;
+      sidebarApp.loadingPlaceId = placeId;
 
-        try {
-            let response = await fetch(detailsUrl);
+      try {
+          let response = await fetch(detailsUrl);
 
-            if (!response.ok) {
-                return;
-            }
+          if (!response.ok) {
+              return;
+          }
 
-            let data = await response.json();
+          let data = await response.json();
 
-            if (sidebarApp.loadingPlaceId != placeId) {
-                // Place loading was cancelled by user
-                return
-            }
+          if (sidebarApp.loadingPlaceId != placeId) {
+              // Place loading was cancelled by user
+              return
+          }
 
-            sidebarApp.selectedPlace = {
-                title: data.title,
-                placeId: placeId,
-                imgs: data.imgs || [],
-                short_description: data.description_short,
-                long_description: data.description_long,
-            };
-        } finally {
-            if (sidebarApp.loadingPlaceId == placeId) {
-                sidebarApp.loadingPlaceId = null;
-            }
-        }
-    }
+          sidebarApp.selectedPlace = {
+              title: data.title,
+              placeId: placeId,
+              imgs: data.imgs || [],
+              short_description: data.description_short,
+              long_description: data.description_long,
+          };
+      } finally {
+          if (sidebarApp.loadingPlaceId == placeId) {
+              sidebarApp.loadingPlaceId = null;
+          }
+      }
+  }
 </script>
 </body>
 </html>
